--- a/index.css
+++ b/index.css
@@ -3,18 +3,20 @@
     src: url(Aurora.otf);
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Aura;
 }
-html , body{
+
+html,
+body {
     height: 100%;
     width: 100%;
 }
 
-#main{
+#main {
     height: 100%;
     width: 100%;
     background-color: aliceblue;
@@ -25,7 +27,7 @@ html , body{
 
 }
 
-#nav{
+#nav {
     height: 100px;
     width: 100%;
     position: fixed;
@@ -36,25 +38,28 @@ html , body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 999;
 }
-#nav h1{
+
+#nav h1 {
     font-size: 20px;
     font-weight: 100;
 }
-#nav #part2{
+
+#nav #part2 {
     display: flex;
     align-items: center;
     justify-content: center;
 
 }
 
-#nav #part2 a{
+#nav #part2 a {
     text-decoration: none;
     color: black;
     margin: 20px;
 }
 
-#nav #part2 a:nth-last-child(1){
+#nav #part2 a:nth-last-child(1) {
     /* background-color: blue; */
     padding: 7px 18px;
     border-radius: 50px;
@@ -63,7 +68,7 @@ html , body{
     overflow: hidden;
 }
 
-#nav #part2 a:nth-last-child(1) #green{
+#nav #part2 a:nth-last-child(1) #green {
     width: 100%;
     height: 100%;
     background-color: springgreen;
@@ -73,18 +78,18 @@ html , body{
     transition: left 0.3s ease-in-out;
 }
 
-#nav #part2 a:nth-last-child(1) h5{
+#nav #part2 a:nth-last-child(1) h5 {
     font-weight: 400;
     z-index: 99;
     position: relative;
 }
 
-#nav #part2 a:nth-last-child(1):hover #green{
+#nav #part2 a:nth-last-child(1):hover #green {
     left: 0;
 }
 
 
-#main>h1{
+#main>h1 {
     font-size: 4vw;
     /* background-color: red; */
     font-weight: 100;
@@ -95,7 +100,7 @@ html , body{
     z-index: 99;
 }
 
-#main>h1::after{
+#main>h1::after {
     content: "";
     position: absolute;
     height: 16px;
@@ -104,11 +109,11 @@ html , body{
     bottom: -6.8%;
     left: 50%;
     background-size: cover;
-    transform: translate(-50%,0);
+    transform: translate(-50%, 0);
 
 }
 
-#main #img1{
+#main #img1 {
     height: 400px;
     width: 290px;
     position: absolute;
@@ -116,7 +121,7 @@ html , body{
     top: 20%;
 }
 
-#main #img2{
+#main #img2 {
     height: 300px;
     width: 290px;
     position: absolute;
@@ -124,7 +129,7 @@ html , body{
     top: 12%;
 }
 
-#main #img3{
+#main #img3 {
     height: 40%;
     /* width: 290px; */
     position: absolute;
@@ -132,13 +137,101 @@ html , body{
     bottom: 5%;
 }
 
-#main img{
+#main img {
     transition: margin 0.4s ease;
 }
 
-#main img:hover{
+#main img:hover {
     margin-bottom: 20px;
 }
-#main img:hover{
+
+#main img:hover {
     margin-top: -20px;
+}
+
+#page2 {
+    height: 70vh;
+    width: 100%;
+    background-color: black;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: aliceblue;
+    flex-direction: column;
+}
+
+#page2 h5 {
+    font-size: 19px;
+    font-weight: 500;
+}
+
+#page2 h5::before{
+    content: "";
+    position: absolute;
+    left: 29.22%;
+    top: 20.6%;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background-color: springgreen;
+
+}
+
+#page2 h1 {
+    font-size: 40px;
+    width: 80%;
+    text-align: center;
+    font-weight: 200;
+    margin: 26px 0;
+    position: relative;
+}
+
+#page2 h1::after{
+    content: "";
+    position: absolute;
+    height: 70px;
+    width: 180px;
+    /* background-color: red; */
+    bottom: 8px;
+    left: 49.6%;
+    background-image: url(https://thisisdigital.co.uk/dist/images/circle-green.svg);
+
+
+}
+
+#aboutus{
+    /* background-color: rebeccapurple; */
+    display: flex;
+    align-items: center;
+
+}
+
+#aboutus>h4{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+#greendiv{
+    height: 40px;
+    width: 80px;
+    /* background-color: blue; */
+    border-radius: 50px;
+    margin-left: 20px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid aliceblue;
+
+}
+
+
+#aboutus img{
+    height: 60px;
+}
+
+#page3{
+    height: 100vh;
+    width: 100vw;
 }
